# cogito

./: Cargo.toml  README.md
spec/: cogito.toml
src/: main.rs  spec.rs  tbox.rs
tests/: tbox_tests.rs
