[package]
name = "cogito"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Operational TBox CLI for the wintermute box"
license = "MIT"
authors = ["Joe Yen <jyen.tech@gmail.com>"]

[[bin]]
name = "cogito"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# horned-owl for fallback RDF/XML emit (matches ousia-forge's dep)
horned-owl = { version = "0.15.0-alpha" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
